Fix text contrast issues

--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,7 @@ All colors MUST be HSL.
     --primary-foreground: 0 0% 100%;
 
     --secondary: 217 10% 47%;
-    --secondary-foreground: 0 0% 100%;
+    --secondary-foreground: 214 9% 46%;
 
     --muted: 210 20% 95%;
     --muted-foreground: 217 10% 47%;
